# SpinePrep

./: .cursorrules  .gitignore  .pa11yci.json  .pre-commit-config.yaml  ARCH.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SCOPE.md  SECURITY.md  doctor.json  lychee.toml  mkdocs.yml  pyproject.toml  pytest.ini  test_acceptance_masking.py  test_cfg.yaml  test_cfg2.yaml  test_cfg3.yaml  test_cfg4.yaml  test_cfg5.yaml  test_cfg6.yaml  test_cfg7.yaml  test_cfg8.yaml  test_discover.json  test_doctor.json  test_samples.tsv
.github/: pull_request_template.md
adapters/: bids.py
configs/: base.yaml  study.yaml
docs/: 404.md  CHANGELOG.md  PLAYBOOK_ChatGPT.md  PLAYBOOK_Cursor.md  PLAYBOOK_Migration.md  cli.md  contributing.md  getting-started.md  index.md  whats-new.md  workflow.md
private/: README.md
schemas/: config.schema.json  confounds.schema.json  derivatives.sidecar.schema.json  doctor.schema.json
scripts/: docs_release.sh  gen_docs_api_ref.py  gen_docs_config_ref.py
site/: 404.html  index.html  sitemap.xml
spineprep/: __init__.py  _sct.py  _version.py  cli.py  config.py  confounds.py  derivatives.py  doctor.py  ingest.py  motion.py  provenance.py  qc.py
spineprep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
steps/: spi05_mppca.sh  spi06_motion.sh  spi07_confounds.sh  spi10_seg_cord.sh  spi11_label_levels.sh  spi12_reg_epi2t2.sh  spi13_reg_t22pam50.sh  spi14_warp_masks.sh
tests/: test_cli_smoke.py  test_config.py  test_config_precedence.py  test_confounds.py  test_dag_render.py  test_derivatives.py  test_doctor.py  (+9 more)
(+261 files in other folders)
